--- a/index.html
+++ b/index.html
@@ -2,43 +2,151 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="index.css" type="text/css"> </head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet"
+	      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+	      type="text/css">
+	<link rel="stylesheet" href="css/index.css" type="text/css">
+</head>
 
-<body class="">
-  <div class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h1 class="">hey株式会社（裏口）への行き方</h1>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-5 order-2 order-md-1">
-          <iframe style="border:0" allowfullscreen="" src="https://www.google.com/maps/embed?pb=!4v1536375469496!6m8!1m7!1s6qjAgEBg-_pOqwRYTVXwVA!2m2!1d35.64705172333334!2d139.7094228147346!3f147.75673576366168!4f0!5f0.7820865974627469" height="300" width="400"></iframe>
-        </div>
-        <div class="col-md-7 order-1 order-md-2">
-          <h3>Switching columns under
-            <i>md</i> breakpoint</h3>
-          <p class="my-3">Both columns have a
-            <i>order-n&nbsp;</i>class. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 10px;right:10px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:250px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;
-    <img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16">
-  </pingendo>
+<body>
+<div class="py-5">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<h1><a href="https://hey.jp/" target="_blank">hey株式会社（裏口）への行き方</a></h1>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="py-5">
+	<div class="container">
+		<div class="row mb-5">
+			<div class="col-md-6 order-2 order-md-1">
+				<iframe  src="https://www.google.com/maps/embed?pb=!4v1536375657145!6m8!1m7!1sq1f2FJBc2jZd1zzMSkQcsQ!2m2!1d35.64699904019869!2d139.7094530822853!3f38.6594934262871!4f26.973471028195178!5f0.7820865974627469"
+				        width="100%" height="300" frameborder="0"
+				        style="border:0" allowfullscreen></iframe>
+			</div>
+			<div class="col-md-6 order-1 order-md-2">
+				<h3>JR恵比寿駅西口からスタートです。</h3>
+			</div>
+		</div>
+		<div class="row mb-5">
+			<div class="col-md-6 order-2 order-md-1">
+				<iframe src="https://www.google.com/maps/embed?pb=!4v1536376381139!6m8!1m7!1sXKGwqxU6WhvWU_xzj0GS_A!2m2!1d35.64717548339341!2d139.7093524801574!3f31.201699922310894!4f7.444281030252654!5f0.7820865974627469"
+				        width="100%" height="300" frameborder="0"
+				        style="border:0" allowfullscreen></iframe>
+			</div>
+			<div class="col-md-6 order-1 order-md-2">
+				<h3>西口を右に出て直進すると、アトレのエスカレーターと日比谷線入口の間につきます。</h3>
+			</div>
+		</div>
+		<div class="row mb-5">
+			<div class="col-md-6 order-2 order-md-1">
+				<iframe src="https://www.google.com/maps/embed?pb=!4v1536376483483!6m8!1m7!1skeDYTxlDsxVmq2kpfxf12A!2m2!1d35.64726987121406!2d139.7094328914209!3f343.78650269377243!4f4.379257084406618!5f0.7820865974627469"
+				        width="100%" height="300" frameborder="0"
+				        style="border:0" allowfullscreen></iframe>
+			</div>
+			<div class="col-md-6 order-1 order-md-2">
+				<h3>日比谷線入口の右側を通って、恵比寿さまにあいさつします。</h3>
+			</div>
+		</div>
+		<div class="row mb-5">
+			<div class="col-md-6 order-2 order-md-1">
+				<iframe src="https://www.google.com/maps/embed?pb=!4v1536376543328!6m8!1m7!1sOoEvgpSZ7k-oTwU0SMPw7g!2m2!1d35.64746720867296!2d139.7093629367308!3f341.97192697659654!4f-3.515771539143387!5f0.7820865974627469"
+				        width="100%" height="300" frameborder="0"
+				        style="border:0" allowfullscreen></iframe>
+			</div>
+			<div class="col-md-6 order-1 order-md-2">
+				<h3>直進して、交番の前まで来ます。目の前の横断歩道を渡ります。</h3>
+			</div>
+		</div>
+		<div class="row mb-5">
+			<div class="col-md-6 order-2 order-md-1">
+				<iframe src="https://www.google.com/maps/embed?pb=!4v1536376682190!6m8!1m7!1skru6Tj8WodBHQNutHprdMg!2m2!1d35.64773219568371!2d139.7092239914003!3f348.8064616938931!4f9.293708073853551!5f0.7820865974627469"
+				        width="100%" height="300" frameborder="0"
+				        style="border:0" allowfullscreen></iframe>
+			</div>
+			<div class="col-md-6 order-1 order-md-2">
+				<h3>さらに横断歩道を渡ると、夜が明けます。高架下をくぐってください。</h3>
+			</div>
+		</div>
+		<div class="row mb-5">
+			<div class="col-md-6 order-2 order-md-1">
+				<iframe src="https://www.google.com/maps/embed?pb=!4v1536376758808!6m8!1m7!1shoqk64qjYfhzs_9FDyKgOA!2m2!1d35.64813989236807!2d139.7095931348132!3f273.36521324634913!4f-9.03330449525562!5f0.7820865974627469"
+				        width="100%" height="300" frameborder="0"
+				        style="border:0" allowfullscreen></iframe>
+			</div>
+			<div class="col-md-6 order-1 order-md-2">
+				<h3>高架下をくぐると、すぐに左に入る道があるので入ってください。</h3>
+			</div>
+		</div>
+		<div class="row mb-5">
+			<div class="col-md-6 order-2 order-md-1">
+				<iframe src="https://www.google.com/maps/embed?pb=!4v1536376784925!6m8!1m7!1shoqk64qjYfhzs_9FDyKgOA!2m2!1d35.64813989236807!2d139.7095931348132!3f335.9649313776888!4f-9.208148703802522!5f0.7820865974627469"
+				        width="100%" height="300" frameborder="0"
+				        style="border:0" allowfullscreen></iframe>
+			</div>
+			<div class="col-md-6 order-1 order-md-2">
+				<h3>直進します。</h3>
+			</div>
+		</div>
+		<div class="row mb-5">
+			<div class="col-md-6 order-2 order-md-1">
+				<iframe src="https://www.google.com/maps/embed?pb=!4v1536376824065!6m8!1m7!1suGG4KWe8gixxSo8i8dG6hA!2m2!1d35.64876141563334!2d139.7093061675281!3f42.28573809451018!4f-6.5006525385307015!5f0.7820865974627469"
+				        width="100%" height="300" frameborder="0"
+				        style="border:0" allowfullscreen></iframe>
+			</div>
+			<div class="col-md-6 order-1 order-md-2">
+				<h3>ローソンが見えます。</h3>
+			</div>
+		</div>
+		<div class="row mb-5">
+			<div class="col-md-6 order-2 order-md-1">
+				<iframe src="https://www.google.com/maps/embed?pb=!4v1536376885964!6m8!1m7!1sj4dw3TcAjTBXWXJTc1MwcQ!2m2!1d35.64885205511946!2d139.7094640135552!3f54.71988820187693!4f-1.2315407653415207!5f0.7820865974627469"
+				        width="100%" height="300" frameborder="0"
+				        style="border:0" allowfullscreen></iframe>
+			</div>
+			<div class="col-md-6 order-1 order-md-2">
+				<h3>横断歩道を渡って右目でローソンを見ながら直進します。</h3>
+			</div>
+		</div>
+		<div class="row mb-5">
+			<div class="col-md-6 order-2 order-md-1">
+				<iframe src="https://www.google.com/maps/embed?pb=!4v1536376915285!6m8!1m7!1s0ic01dl4rKoDficXBzJw8w!2m2!1d35.64903618149295!2d139.7097955667964!3f52.532068201121064!4f-12.894194604312148!5f0.7820865974627469"
+				        width="100%" height="300" frameborder="0"
+				        style="border:0" allowfullscreen></iframe>
+			</div>
+			<div class="col-md-6 order-1 order-md-2">
+				<h3>焼肉寿司というよだれが出そうな看板があったら、左に曲がります。</h3>
+			</div>
+		</div>
+		<div class="row mb-5">
+			<div class="col-md-6 order-2 order-md-1">
+				<iframe src="https://www.google.com/maps/embed?pb=!4v1536376989108!6m8!1m7!1s2z5sAReOvajurs0gZoBr_g!2m2!1d35.64953062861132!2d139.7096128483521!3f339.7629610670162!4f-16.816510909830043!5f0.7820865974627469"
+				        width="100%" height="300" frameborder="0"
+				        style="border:0" allowfullscreen></iframe>
+			</div>
+			<div class="col-md-6 order-1 order-md-2">
+				<h3>直進して交差点まで行きます。交差点を右に曲がって橋を渡ります。</h3>
+			</div>
+		</div>
+		<div class="row mb-5">
+			<div class="col-md-6 order-2 order-md-1">
+				<iframe src="https://www.google.com/maps/embed?pb=!4v1536377039557!6m8!1m7!1sIyk1mvhHkEoG6GvRyIVcgg!2m2!1d35.6497440117958!2d139.7098870047674!3f135.75143698366983!4f-8.10834642010336!5f0.7820865974627469"
+				        width="100%" height="300" frameborder="0"
+				        style="border:0" allowfullscreen></iframe>
+			</div>
+			<div class="col-md-6 order-1 order-md-2">
+				<h3>リュックを背負ったお兄さんがいる階段を見つけたらミッションコンプリートです。</h3>
+			</div>
+		</div>
+	</div>
+</div>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 
 </html>
