--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<h1><a href="https://hey.jp/" target="_blank">hey株式会社（裏口）への行き方</a></h1>
+				<h1>hey株式会社（裏口）への行き方</h1>
 			</div>
 		</div>
 	</div>
